...
    "160" : {

    },
    "A-Weighting" : {

    },
    "Abbrechen" : {

    },
    "Abspielen" : {

    },
    "AKTIVITÄT" : {
...
    "AUFNAHME-BUTTON DRÜCKEN" : {

    },
    "Aufnahmemodus" : {

    },
    "Aufnahmen" : {

    },
    "AUFZEICHNUNG LÄUFT" : {

    },
    "Ausrichtung" : {
...
      "comment" : "A label displayed above the input fields.",
      "isCommentAutoGenerated" : true
    },
    "Eingabemodus" : {

    },
    "Einstellungen" : {

    },
    "Einzelwert-Aktualisierung" : {

    },
    "Empfindlichkeit" : {
...
    "Fensterform: %@" : {

    },
    "Fensterfunktion" : {

    },
    "Fertig" : {

    },
    "Filter hinzufügen" : {

    },
    "Fortsetzen" : {
...
      "comment" : "A label displayed above the picker for the watch measurement source.",
      "isCommentAutoGenerated" : true
    },
    "Messung" : {

    },
    "Messung & Audio" : {

    },
    "Messwert" : {

    },
    "Messwert über Zeit" : {
...
    "Sample" : {

    },
    "Schalldruckpegel (dB SPL)" : {

    },
    "Schließen" : {

    },
    "Schnellauswahl" : {

    },
    "Schwelle: %lld dB SPL" : {
...

    },
    "Sortieren" : {
      "comment" : "A section in the toolbar for sorting recordings.",
      "isCommentAutoGenerated" : true
    },
    "Speichern" : {

    },
    "Speichern fehlgeschlagen" : {
      "comment" : "The title of an alert that is shown when a recording fails to be saved.",
      "isCommentAutoGenerated" : true
    },
...
      "comment" : "A warning that the frequency analysis is based on audio data, not the actual measurement.",
      "isCommentAutoGenerated" : true
    },
    "Spektrale Leckage verstehen" : {

    },
    "Spektrogramm" : {

    },
    "Spektrogramm Einstellungen" : {

    },
    "Spektrogramm exportieren" : {
...
    "Widget entfernen" : {

    },
    "Widget entfernt" : {

    },
    "Widget hinzufügen" : {

    },
    "Widget-Einstellungen aktivieren" : {

    },
    "Widgetgröße" : {
...
